This fixes the double scrollbars issue

--- a/core/css/apps.css
+++ b/core/css/apps.css
@@ -371,7 +371,6 @@
 #app-content-wrapper {
 	min-width: 100%;
 	min-height: 100%;
-	overflow-y: auto;
 }
 
 
